--- a/views/builder.ejs
+++ b/views/builder.ejs
@@ -1382,7 +1382,6 @@ document.addEventListener("input", function (e) {
 });
 let buildurl
 document.getElementById("buildBtn").onclick = async () => {
- 
   const portfolioData = JSON.parse(
     sessionStorage.getItem("portfolioData")
   );
@@ -1397,15 +1396,15 @@ document.getElementById("buildBtn").onclick = async () => {
 
   const data = await res.json();
 
-  // alert("Build link copied!");
-  let later = 'https://framecv.onrender.com/'
-  later += data.url
-  buildurl = data.url
-  // console.log(later)
-  console.log(data.url)
-  navigator.clipboard.writeText(data.url);
-  openAlert()
+  const fullUrl = `${window.location.origin}${data.path}`;
+  buildurl = fullUrl
+  navigator.clipboard.writeText(fullUrl);
+
+  console.log(fullUrl);
+  openAlert();
 };
+
+
 document.getElementById("viewport").addEventListener("click", () => {
   window.open(buildurl, "_blank", "noopener,noreferrer");
 });
