--- a/views/builder.ejs
+++ b/views/builder.ejs
@@ -1404,7 +1404,7 @@ document.getElementById("buildBtn").onclick = async () => {
 
   buildurl = later
   // console.log(later)
-  console.log(data.url)
+  console.log(later)
   navigator.clipboard.writeText(later);
   openAlert()
 };
