--- a/views/builder.ejs
+++ b/views/builder.ejs
@@ -1398,15 +1398,20 @@ document.getElementById("buildBtn").onclick = async () => {
   const data = await res.json();
 
   // alert("Build link copied!");
-  let later = 'https://framecv.onrender.com/'
-  later = data.url
-  later = later.replace(/\/undefined(\/|$)/, "/");
+  let later = data.url;
 
-  buildurl = later
-  // console.log(later)
-  console.log(later)
+  // remove any leading /undefined
+  later = later.replace(/^\/undefined/, "");
+
+  // ensure absolute URL
+  if (!later.startsWith("http")) {
+    later = window.location.origin + later;
+  }
+
+  buildurl = later;
+
   navigator.clipboard.writeText(later);
-  openAlert()
+  openAlert();
 };
 
 
